# Windows-Device-Serial-Cpp

./: .gitignore  CMakeLists.txt  README.md  win32_devices_serialdevice_lib.vcxproj  win32_devices_serialdevice_lib.vcxproj.filters
include/: Win32.Devices.SerialDevice.h  Win32.Devices.SerialDevice.hpp
lib/Win32/Debug/: win32_devices_serialdevice.lib  win32_devices_serialdevice_lib.idb  win32_devices_serialdevice_lib.lib
lib/Win32/Release/: win32_devices_serialdevice.lib  win32_devices_serialdevice_lib.lib
lib/x64/Debug/: win32_devices_serialdevice.lib  win32_devices_serialdevice_lib.idb  win32_devices_serialdevice_lib.lib
lib/x64/Release/: win32_devices_serialdevice.lib  win32_devices_serialdevice_lib.lib
src/: CoreZero.Delegate.hpp  CoreZero.Event.hpp  Win32.Devices.SerialDevice.cpp  Win32.Devices.SerialDevice.h
tests/: CMakeLists.txt  tests.cpp  tests.vcxproj  tests.vcxproj.filters  win32_devices_serialdevice_tests.cpp
tests/src/: SerialDeviceTests.cpp
